[package]
name = "cnctd_db"
version = "0.1.0"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Wrapper around DB methods"
repository = "https://github.com/Connected-Dot/cnctd_db"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
# sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "tls-rustls"] }
